💄 Fix: modal align

--- a/src/components/Contents/Modal/ModalDescriptionBody.module.scss
+++ b/src/components/Contents/Modal/ModalDescriptionBody.module.scss
@@ -4,5 +4,5 @@
   position: relative;
   width: 100%;
   height: 100%;
-  @include flex($justify: start);
+  @include flex($justify: start, $align: start);
 }
